--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -2,7 +2,7 @@ workflows:
   simulator-workflow:
     name: Build for simulator
     environment:
-      xcode: latest
+      xcode: 15.3
       flutter: 3.24.5  # or your specific version
     scripts:
       - name: Install Flutter dependencies
