--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -28,21 +28,14 @@ workflows:
       - name: Generate localization files
         script: fvm flutter gen-l10n
 
-      - name: Resolve CocoaPods
+      - name: Install CocoaPods dependencies
         script: |
           cd ios
           pod install
           cd ..
 
-      - name: Build with Generic Destination
-        script: |
-          xcodebuild build \
-            -project "ios/Runner.xcodeproj" \
-            -scheme "Runner" \
-            -sdk iphonesimulator \
-            -configuration Debug \
-            -destination 'generic/platform=iOS Simulator' \
-            CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO
+      - name: Build iOS app for simulator
+        script: fvm flutter build ios --debug --simulator --no-codesign
 
     artifacts:
-      - /Users/builder/Library/Developer/Xcode/DerivedData/**/*.app
+      - build/ios/iphonesimulator/*.app
