--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -3,7 +3,7 @@ workflows:
     name: Build for simulator
 
     environment:
-      xcode: latest
+      xcode: 15.3
       cocoapods: default
       vars:
         FLUTTER_VERSION: 3.24.5
